@@ -1,3 +1,4 @@
+Fraction Builder: Fixed: Composite fraction card wrong size unless window at 1024x768
 # 0.00.87 (65174) Jun 16, 2012
 Fraction Matcher: fixed randomization scheme for later levels
 Fraction Matcher: Exclude "interleaved L shapes" for denominator > 4
